--- a/src/components/dingtalk/TextCard/index.less
+++ b/src/components/dingtalk/TextCard/index.less
@@ -1,10 +1,7 @@
+@import '../../../styles/base.less';
+
 .dingtalk-text-card {
-  padding: 12px;
-  width: 240px;
-  font-size: 14px;
-  color: #333;
-  background: #fff;
-  border: 1px solid #ddd;
-  box-shadow: 0 0 2px 1px #eee;
-  border-radius: 4px;
+  .base-card;
+  font-size: @font-size-text;
+  color: @color-text;
 }
