--- a/src/components/dingtalk/ActionCard/index.less
+++ b/src/components/dingtalk/ActionCard/index.less
@@ -11,7 +11,7 @@
     padding: 0;
     overflow: visible;
     float: none!important;
-    margin: 0 auto;
+    // margin: 0 auto;
     .card-link-container{
       margin: 0;
       padding: 0;
