--- a/src/components/dingtalk/FeedCard/index.less
+++ b/src/components/dingtalk/FeedCard/index.less
@@ -1,4 +1,4 @@
-@import '../../../styles/base.less';
+@import "../../../styles/base.less";
 
 .dingtalk-feed-card {
   .base-card;
@@ -12,12 +12,13 @@
   vertical-align: baseline;
   &-top {
     width: 100%;
-    background:  50% no-repeat;
+    background: 50% no-repeat;
     height: 200px;
     cursor: pointer;
     &-cover {
       height: 100%;
-      background: url('https://g.alicdn.com/DingTalkWeb/web/3.8.1/assets/webpack-img/shadow-cover.png') 50% repeat-x;
+      background: url("https://g.alicdn.com/DingTalkWeb/web/3.8.1/assets/webpack-img/shadow-cover.png")
+        50% repeat-x;
       display: flex;
       align-items: flex-end;
       p {
@@ -47,14 +48,14 @@
   &-item {
     list-style: none;
     padding: 0 11px;
-    &-content{
+    &-content {
       border-bottom: none;
       cursor: pointer;
       padding: 5px 0;
       display: flex;
       flex-direction: row;
       height: 50px;
-      &-title{
+      &-title {
         padding-right: 10px;
         flex: 1;
         display: flex;
@@ -69,7 +70,7 @@
           color: #222;
         }
       }
-      &-pic{
+      &-pic {
         flex: 0 0 50px;
         background: 50% no-repeat;
         background-size: cover;
